assets/less/edware.less
/* ... */
/* Loading image style */
.loader {
  position:absolute; 
  z-index: 99; 
  width: 100%; 
  
  height: 100%; 
  left: 0; 
  top: 170px; 
  bottom:0; 
  margin:0; 
  overflow:visible;
  display: none;

  .message {
    background: url("../images/loading.gif") no-repeat top center;
    font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif; 
    color: #424242; 
    width: 460px;
    margin: 165px auto 0 auto;
    text-align: center;
    height: 40px;
    padding-top: 36px;
  }
}

/* breadcrumb arrow styles */
.arrowSeperator {
    background: url("../images/css_images.png") no-repeat;
    background-position: -379px 0;
    float: left;
    height: 18px;
    margin: 0 5px;
    width: 8px;
}


.printContent { display: none; }
.assessmentOtherInfoHeader { display: none;}
      

    
    

